--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ footer {
     margin-top: 11vh;
     margin-bottom: 4vh;
     margin-left: 10vw;
-    height: 86vh;
+    height: 85vh;
 }
 #home img {    
     width: 528px;
@@ -148,4 +148,72 @@ footer {
     justify-content: left;
     align-items: center;
     padding-left: 5vw;
+}
+#skills, #project, #contact {    
+    padding-bottom: 4vh;    
+    height: 85vh;
+    padding-top: 11vh;
+}
+.skillsImg {    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;    
+}
+.skillsImg li, #project li {
+    list-style: none;
+}
+#skills img {
+   margin: 30px;     
+}
+.subTitle {    
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 35px;
+    color: #FFFFFF;
+    border-bottom: 2px solid #007CED;
+    
+    margin-top: 47px;
+    width: 168px;
+}
+#project ul {
+    display: flex;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 35px;
+    color: rgba(255, 255, 255, 0.5);    
+}
+#project li {
+    margin: 45px;
+}
+.detail {
+    margin-left: 120px;
+}
+.imgntxt {
+    display: flex;
+    margin: 40px;
+}
+.contactcard {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 35px;
+    color: #FFFFFF;
+    margin-bottom: 40px;
+    margin-left: 120px;
+}
+.contactdetail {
+    padding-top: 14vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: top;    
 }
